--- a/go1_cms/templates/includes/web_themes.css
+++ b/go1_cms/templates/includes/web_themes.css
@@ -759,7 +759,7 @@ li {
         background-color:{{doc.footer_css.background_color}};
     {% endif %}
       {% if doc.footer_css.footer_bg_image %}
-        background-image:{{doc.footer_css.footer_bg_image}};
+        background-image:url('{{doc.footer_css.footer_bg_image}}');
     {% endif %}
     {% if doc.footer_css.footer_vertical_padding %}
         padding:{{doc.footer_css.footer_vertical_padding}} 0px;
@@ -865,9 +865,16 @@ li {
     margin: 10px 0;
  }
 {%endif%}
+
+.go1-cms-footer a span:hover{
+    {% if doc.footer_css.link_hover_color %}
+        color: {{doc.footer_css.link_hover_color}} !important;
+    {% endif %}  
+}
+
 .go1-cms-footer a:hover{
     {% if doc.footer_css.link_hover_color %}
-        color: {{doc.footer_css.link_hover_color}};
+        color: {{doc.footer_css.link_hover_color}} !important;
     {% endif %}  
 }
 .go1-cms-footer-title{
